--- a/addpassword.html
+++ b/addpassword.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./assets/css/adduser.css">
+<link rel="stylesheet" href="./assets/css/addpassword.css">
 </head>
 <body>
 
